2003-02-22  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Changed comparision if two angles are equal
	  to double since Dan McMahill discovered a case where the difference
	  between the angles were actually less than 0.5 degrees.  
	  Closes bug #689663.

	* src/gerbv.c: I you tried to swap layer with an unused layer 
	  gerbv segfaulted. Also discovered by Dan McMahill. Cudos to him
	  as usual... Closes bug #689667.
	
2003-02-12  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: A patch from Peter Monta for incremental
	  coordinates. He also discovered that I had a mistake
	  in parsing incremental/absolute coordinates.

-- Release 0.12 --

2003-02-06  Stefan Petersen  <spe@stacken.kth.se>

	* src/drill.c; Exchanged the last fprintf(stderr, with
	  GERB_COMPILE_ERROR.

	* src/gerbv.c: Added swap of tooltips information too.

2003-02-02  Stefan Petersen  <spe@stacken.kth.se>

	* src/drill.c: Added patch from Dan McMahill since + sign
	  before coordinates seemed to confuse the drill parser.
	  Closes bug #678407.

	* src/gerbv.c: Now you can move around layers in the right
	  sidebar so you can select in which order the layers should 
	  be presented.

	* src/draw.c, src/drill.c, src/gerb_image.[hc], src/gerber.c:
	  A new system to keep track of mm and inches. Everything is
	  still drawn based on inches and min/max is also stored as
	  inches. But now every aperture and every coordinate has a 
	  unit attached to it that is used when drawing. I hope I 
	  haven't breaked anything, patricular in drill.c. And I have
	  very few (one) reference examples in millimeters.

2003-01-26  Stefan Petersen  <spe@stacken.kth.se>

	* src/log.[hc], src/gerbv.c: Made sure error messages are 
	  directed to the right place (shell and popup) at the
	  right moment and that the error messages look nicer.

	* .cvsignore, man/.cvsignore, scheme/.cvsignore, src/.cvsignore:
	  Added these files submitted by Holger Waechtler. Thanks!
